--- a/index.html
+++ b/index.html
@@ -1,1 +1,27 @@
-<p>yo</p>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="catboy.tools">
+        <meta property="og:title" content="catboy">
+        <meta property="og:description" content="^-^">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="main.css">
+        <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+        <div id="particles-js"></div>
+    </head>
+    <body>
+        <ul>
+            <img class='gif' src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif">
+            <li><a href="">catboy.tools/</a></li>
+            <li style="float:right"><a href="">about</a></li>
+          </ul> 
+          <div class="animate" id="titletext">catboy.tools</div>
+        <script src="index.js" async defer></script>
+        
+    </body>
+</html>
