--- a/about/index.html
+++ b/about/index.html
@@ -10,17 +10,17 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="main.css">
+        <link rel="stylesheet" href="../main.css">
         <div onContextMenu="return false;" id="particles-js"></div>
     </head>
     <body>
         <ul>
-            <a href=""><img class='gif'  src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif"></a>
-            <li><a style="cursor: default;">catboy.tools</a></li>
-            <li style="float:right"><a href="about/index.html">about</a></li>
+            <a href="../index.html"><img class='gif'  src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif"></a>
+            <li><a style="cursor: default;">catboy.tools/about</a></li>
+            <li style="float:right;"><a href="">about</a></li>
           </ul> 
           <div class="animate" id="titletext">catboy.tools</div>
-        <script src="index.js" async defer></script>
+        <script src="../index.js" async defer></script>
         
     </body>
 </html>
