--- a/index.html
+++ b/index.html
@@ -11,16 +11,22 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="main.css">
-        <div onContextMenu="return false;" id="particles-js"></div>
+        <div id="particles-js"></div>
+        <div class="count-particles">
+            <span class="js-count-particles"></span></div>
+            <script src="http://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+            <script src="http://threejs.org/examples/js/libs/stats.min.js"></script>
     </head>
     <body>
         <ul>
             <a href=""><img class='gif'  src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif"></a>
             <li><a style="cursor: default;">catboy.tools</a></li>
             <li style="float:right"><a href="about/index.html">about</a></li>
+            <li style="float:right"><a href="homepage/index.html">homepage</a></li>
           </ul> 
           <div class="animate" id="titletext">catboy.tools</div>
         <script src="index.js" async defer></script>
         
     </body>
 </html>
+
