--- a/homepage/index.html
+++ b/homepage/index.html
@@ -20,13 +20,29 @@
     <body>
         <ul>
             <a href="../index.html"><img class='gif'  src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif"></a>
-            <li><a style="cursor: default;">catboy.tools/about</a></li>
+            <li><a style="cursor: default;">catboy.tools/homepage</a></li>
             <li style="float:right;"><a href="">about</a></li>
             <li style="float:right"><a href="../homepage/index.html">homepage</a></li>
           </ul> 
-          <div class="animate" id="titletext">catboy.tools</div>
         <script src="../index.js" async defer></script>
-        
+
+        <div class="container">
+            <input type="text" placeholder="search">
+        </div>
+        <div class="container">
+            <div class="item"><button class="button-55" role="button">soundcloud</button></div>
+            <div class="item"><button class="button-55" role="button">spotify</button></div>
+            <div class="item"><button class="button-55" role="button">geoguessr</button></div>
+          </div>
+
+
+
+
+          <!--<iframe id="if1" width="100%" height="254" style="visibility:visible" src="https://www.google.com/search?igu=1"></iframe>!-->
+        </div>
+
+
+                  
     </body>
 </html>
 
