--- a/homepage/index.html
+++ b/homepage/index.html
@@ -21,7 +21,7 @@
         <ul>
             <a href="../index.html"><img class='gif'  src="https://i.giphy.com/media/ee5tryZZI9lvi/200w.gif"></a>
             <li><a style="cursor: default;">catboy.tools/homepage</a></li>
-            <li style="float:right;"><a href="">about</a></li>
+            <li style="float:right;"><a href="../about/index.html">about</a></li>
             <li style="float:right"><a href="../homepage/index.html">homepage</a></li>
           </ul> 
         <script src="../index.js" async defer></script>
