--- a/about/index.html
+++ b/about/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>catboy.tools</title>
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="catboy.tools">
         <meta property="og:title" content="catboy">
