--- a/homepage/index.html
+++ b/homepage/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>catboy.tools</title>
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="catboy.tools">
         <meta property="og:title" content="catboy">
@@ -30,19 +31,11 @@
             <input type="text" placeholder="search">
         </div>
         <div class="container">
-            <div class="item"><button class="button-55" role="button">soundcloud</button></div>
-            <div class="item"><button class="button-55" role="button">spotify</button></div>
-            <div class="item"><button class="button-55" role="button">geoguessr</button></div>
+            <div class="item"><button class="button-55" onclick=" window.open('http://soundcloud.com','_blank')" role="button">soundcloud</button></div>
+            <div class="item"><button class="button-55" onclick=" window.open('http://spotify.com','_blank')" role="button">spotify</button></div>
+            <div class="item"><button class="button-55" onclick=" window.open('http://geoguessr.com','_blank')" role="button">geoguessr</button></div>
           </div>
-
-
-
-
-          <!--<iframe id="if1" width="100%" height="254" style="visibility:visible" src="https://www.google.com/search?igu=1"></iframe>!-->
-        </div>
-
-
-                  
+        </div>           
     </body>
 </html>
 
